Add Lecture 3 slides link to index.html

--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
                         <li>Vector databases for production systems</li>
                     </ul>
                     <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture3_Yuan-Sen_Ting/LLM_Function_Tools_RAG_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
+                    <a href="https://www.asc.ohio-state.edu/ting.74/Astron1221/STIG_Lecture3_Slides" class="btn" target="_blank">View Slides</a>
                 </div>
             </div>
         </section>
