Add Lecture 3 video to index.html

--- a/index.html
+++ b/index.html
@@ -673,6 +673,9 @@
                         <li>Document chunking and embedding search</li>
                         <li>Vector databases for production systems</li>
                     </ul>
+                    <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 8px;" src="https://www.youtube.com/embed/eic_kIll-ts" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                     <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture3_Yuan-Sen_Ting/LLM_Function_Tools_RAG_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
                     <a href="https://www.asc.ohio-state.edu/ting.74/Astron1221/STIG_Lecture3_Slides" class="btn" target="_blank">View Slides</a>
                 </div>
