Add Lecture 4: AI Agents and Multi-Agent Systems by Francisco Villaescusa-Navarro

--- a/index.html
+++ b/index.html
@@ -679,6 +679,23 @@
                     <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture3_Yuan-Sen_Ting/LLM_Function_Tools_RAG_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
                     <a href="https://www.asc.ohio-state.edu/ting.74/Astron1221/STIG_Lecture3_Slides" class="btn" target="_blank">View Slides</a>
                 </div>
+
+                <div class="lecture-card">
+                    <h3>Lecture 4: AI Agents</h3>
+                    <p><strong>Large Language Models as Research Agents: Part 3</strong></p>
+                    <p style="color: #60a5fa; font-weight: 500; margin-top: 0.75rem;">Francisco Villaescusa-Navarro, Flatiron Institute CCA</p>
+                    <p>Explore autonomous AI agents that can reason, act, and collaborate. Learn about multi-agent systems, LangGraph workflows, and how AI agents are revolutionizing scientific research from literature search to experiment design.</p>
+                    <p><strong>Topics Covered:</strong></p>
+                    <ul>
+                        <li>AI Agents and ReAct (Reason + Act) framework</li>
+                        <li>Multi-agent systems: collaboration & competition</li>
+                        <li>Agentic workflows in scientific research</li>
+                        <li>LangGraph for building agent systems</li>
+                        <li>Applications: hypothesis generation, code generation, paper writing</li>
+                    </ul>
+                    <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture4_Francisco_Villaescusa-Navarro/AI_Agents_Multi-Agent_Systems_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
+                    <a href="Resources/Lecture4_Francisco_Villaescusa-Navarro/AI_Agents_and_Multi-Agent_Systems.pdf" class="btn" target="_blank">View Slides (PDF)</a>
+                </div>
             </div>
         </section>
 
