--- a/index.html
+++ b/index.html
@@ -693,6 +693,9 @@
                         <li>LangGraph for building agent systems</li>
                         <li>Applications: hypothesis generation, code generation, paper writing</li>
                     </ul>
+                    <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 8px;" src="https://www.youtube.com/embed/7hY8wLjGSdg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                     <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture4_Francisco_Villaescusa-Navarro/AI_Agents_Multi-Agent_Systems_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
                     <a href="Resources/Lecture4_Francisco_Villaescusa-Navarro/AI_Agents_and_Multi-Agent_Systems.pdf" class="btn" target="_blank">View Slides (PDF)</a>
                 </div>
