--- a/index.html
+++ b/index.html
@@ -760,6 +760,12 @@
                     <tr>
                         <td>5</td>
                         <td>Dec 1</td>
+                        <td>NSF Funding Opportunity</td>
+                        <td>Andreas Berlind, NSF</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>Dec 8</td>
                         <td>NASA/NSF Programs (ACCESS, NAIRR)</td>
                         <td>TBD</td>
                     </tr>
@@ -768,8 +774,8 @@
                         <td colspan="4"><strong>Module 3: Deep Learning Frameworks</strong></td>
                     </tr>
                     <tr>
-                        <td>6-7</td>
-                        <td>Dec 8 & 15</td>
+                        <td>7-8</td>
+                        <td>Dec 15 & 22</td>
                         <td>PyTorch/JAX</td>
                         <td>Phil Cargile, Harvard-Smithsonian</td>
                     </tr>
