Update Dec 8 schedule: Yuan-Sen Ting (OSU) on MCP
Replace Andreas Berlind NSF Funding Opportunity session with Yuan-Sen Ting's MCP lecture

--- a/index.html
+++ b/index.html
@@ -766,8 +766,8 @@
                     <tr>
                         <td>5</td>
                         <td>Dec 8</td>
-                        <td>NSF Funding Opportunity</td>
-                        <td>Andreas Berlind, NSF</td>
+                        <td>MCP</td>
+                        <td>Yuan-Sen Ting, OSU</td>
                     </tr>
                     
                     <tr class="module-header">
