Add Lecture 5 video embed to index.html

--- a/index.html
+++ b/index.html
@@ -728,6 +728,9 @@
                         <li>Connecting local data to LLMs</li>
                         <li>Resources and Tools</li>
                     </ul>
+                    <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 8px;" src="https://www.youtube.com/embed/ttKtiG6-V5U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                     <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture5_Yuan-Sen_Ting/LLM_MCP_STIG.ipynb" class="btn" target="_blank">View/Download on GitHub</a>
                     <a href="https://www.asc.ohio-state.edu/ting.74/Astron1221/STIG_Lecture5_Slides" class="btn" target="_blank">View Slides</a>
                     
