Replace Zoom link with reference to NASA AI/ML STIG official page

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                 <p><strong>Format:</strong> Weekly 1-hour sessions (40-45 mins + questions)</p>
                 <p><strong>Time:</strong> Mondays at 4:00 PM ET</p>
                 <p><strong>Delivery:</strong> Remote only</p>
-                <p><strong>Zoom Link:</strong> <a href="https://jhubluejays.zoom.us/j/99856321582?pwd=CmUHJiPYjeWPs4plO74ybKbDsdKgCX.1" target="_blank">Join Meeting</a></p>
+                <p><strong>Meeting Link:</strong> Link can be found at <a href="https://science.nasa.gov/astrophysics/programs/cosmic-origins/community/artificial-intelligence-machine-learning-science-technology-interest-group-ai-ml-stig/" target="_blank">NASA AI/ML STIG Official Page</a></p>
             </div>
 
             <h3>Lecture Series Overview</h3>
