Split Cargile lectures into separate entries: PyTorch/Autodiff (Dec 15) and JAX (Dec 22)

--- a/index.html
+++ b/index.html
@@ -804,9 +804,15 @@
                         <td colspan="4"><strong>Module 2: Deep Learning Frameworks</strong></td>
                     </tr>
                     <tr>
-                        <td>6-7</td>
-                        <td>Dec 15 & 22</td>
-                        <td>PyTorch/JAX</td>
+                        <td>6</td>
+                        <td>Dec 15</td>
+                        <td>PyTorch and Autodiff</td>
+                        <td>Phil Cargile, Harvard-Smithsonian</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Dec 22</td>
+                        <td>JAX</td>
                         <td>Phil Cargile, Harvard-Smithsonian</td>
                     </tr>
                     
