Change Autodiff to Autodifferentiation for clarity

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                     <tr>
                         <td>6</td>
                         <td>Dec 15</td>
-                        <td>PyTorch and Autodiff</td>
+                        <td>PyTorch and Autodifferentiation</td>
                         <td>Phil Cargile, Harvard-Smithsonian</td>
                     </tr>
                     <tr>
