Add Lecture 6: PyTorch & Automatic Differentiation by Phil Cargile
- Added PyTorch_Autodiff_STIG.ipynb and PyTorch_Autodiff_STIG.pdf
- Created Resources/Lecture6_Phil_Cargile/ folder
- Updated index.html with Lecture 6 materials

--- a/index.html
+++ b/index.html
@@ -739,6 +739,24 @@
                         <span style="font-size: 0.8rem;">Ting, Y.-S. (2025). <em>Coding Essentials for Astronomers</em>. Zenodo. <a href="https://doi.org/10.5281/zenodo.17850426" target="_blank">DOI: 10.5281/zenodo.17850426</a></span>
                     </p>
                 </div>
+
+                <div class="lecture-card">
+                    <h3>Lecture 6: PyTorch & Automatic Differentiation</h3>
+                    <p><strong>Deep Learning Frameworks: Part 1</strong></p>
+                    <p style="color: #60a5fa; font-weight: 500; margin-top: 0.75rem;">Phil Cargile, Harvard-Smithsonian CfA</p>
+                    <p>Master the fundamentals of PyTorch and automatic differentiation. Learn how to build, train, and optimize neural networks using PyTorch's powerful autodiff engine. From basic tensor operations to training your first neural network.</p>
+                    <p><strong>Topics Covered:</strong></p>
+                    <ul>
+                        <li>PyTorch tensors and operations</li>
+                        <li>Automatic differentiation (autograd)</li>
+                        <li>Building models with torch.nn.Module</li>
+                        <li>Optimization with torch.optim</li>
+                        <li>CPU vs GPU: device management</li>
+                        <li>Training a minimal MLP from scratch</li>
+                    </ul>
+                    <a href="https://github.com/tingyuansen/NASA_AI_ML_STIG/blob/main/Resources/Lecture6_Phil_Cargile/PyTorch_Autodiff_STIG.ipynb" class="btn" target="_blank">View/Download Notebook on GitHub</a>
+                    <a href="Resources/Lecture6_Phil_Cargile/PyTorch_Autodiff_STIG.pdf" class="btn" target="_blank">View Slides (PDF)</a>
+                </div>
             </div>
         </section>
 
